Changing routes, adding more mocks, and improving some Python tests.
